# 2D-retro-demo

./: CMakeLists.txt
src/: engine.cpp  engine.h  main.cpp
src/game/: enemy.cpp  enemy.h  entity.cpp  entity.h  player.cpp
src/shader/: shader.h
src/shapes/: Cloud.cpp  Cloud.h  circle.cpp  circle.h  rect.cpp  rect.h  shape.cpp  shape.h  sprite.cpp  sprite.h  textbox.cpp  textbox.h  triangle.cpp
